# simulation_multimodal_ant

./: .gitignore  NOTICE  README.md  environment.yml  pyproject.toml
ant_sim/: __init__.py  ant_maze_multimodal.py
versatil_inference/: __init__.py  environment.py  episode_recorder.py  run_evaluation.py  server.py  socket_flags.py
