[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-ant-inference"
version = "0.1.0"
description = "Multimodal Ant maze simulator with a VersatIL inference server."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<2",
    "gymnasium==0.29.1",
    "mujoco==3.1.6",
    "glfw",
    "imageio",
    "pyzmq",
    "opencv-python-headless",
    "draccus",
    "wandb",
    "tso-robotics-sockets",
    "versatil-constants>=0.2.1",
]

[tool.setuptools.packages.find]
include = ["versatil_inference*", "ant_sim*"]

[tool.setuptools.package-data]
ant_sim = ["assets/*.xml"]

[tool.ruff]
line-length = 88
target-version = "py310"
